--- a/Devel/Config/5.8-rc/git/bfq-git/config
+++ b/Devel/Config/5.8-rc/git/bfq-git/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.8-arch1 Kernel Configuration
+# Linux/x86 5.8-arch2 Kernel Configuration
 #
 
 #
@@ -190,6 +190,7 @@ CONFIG_UTS_NS=y
 CONFIG_TIME_NS=y
 CONFIG_IPC_NS=y
 CONFIG_USER_NS=y
+CONFIG_USER_NS_UNPRIVILEGED=y
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
