--- a/linux-5.8rc/linux-bfq/PKGBUILD
+++ b/linux-5.8rc/linux-bfq/PKGBUILD
@@ -53,7 +53,7 @@ _minor=rc1
 _tag=v${_major}-${_minor}
 pkgver=${_major}${_minor}
 _srcname=linux
-pkgrel=2
+pkgrel=3
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -79,6 +79,7 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git#tag=${
         "${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
         "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
+        "${_lucjanpath}/arch-patches/0001-fixes-5.8-add-knobs-to-disallow-unprivileged-CLONE_N.patch"
         'sphinx-workaround.patch'
          # the main kernel config files
         'config')
@@ -327,8 +328,9 @@ sha512sums=('SKIP'
             'eda1b208fa2ba8f08685a975436eb836e2090988a7ac0cca91c18f2581af0212a5d92ceeaa970ee78fedbad94becf6fbcfaa31c25740a3ce73e6f2da38f75f17'
             'ff8a0efdc8a2daeca5cf50db38ac627a874325834e912cf4ea87f840789ddddf7565ac65b5c6005cb293e3b2f423d0686da617acf944954a06b90652db4b9b6b'
             '442d0ed07622c6c62107ecf1c73b44c7623d3c57c5c61bcfb29be04ee2d40af6c9e96b9467aeb811d0b205749b2363bc8f8af8853f75ecbce7d9c920c535789f'
+            'b42c802c90943eab465f2afc4490e246d617c66961ecdf50eae712643082b1370bba66f5f08ee4694df85349e7ed4c6b83ab5cb9e20e10ba4e96068be700cdc9'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '4ae7c9e969c5023edd5f6c6d741cedd46903b0bae674d22c626f6cbfaa639fd53c5d3f4ed6075cec9b6e6c1ffbb31834061741a52ed20db2b9cb0b41c102e106')
+            '1e89de3c34bf11e81a3a6ceebc734f85aca3b2d42375b863c330bc4955d7c9d8f40a26fb3cc46540fcbb73695a4f8e66a817fea30198a9da315b547320bf4278')
 
 validpgpkeys=(
               'ABAF11C65A2970B130ABE3C479BE3E4300411886' # Linus Torvalds
