--- a/linux-5.8rc/linux-bfq-git/PKGBUILD
+++ b/linux-5.8rc/linux-bfq-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-bfq-git
 _major=5.8
 _major_rc=5.8-rc
 _srcname=linux
-pkgver=5.8.rc1.r19.ga5dc8300df75
+pkgver=5.8.rc1.r118.g69119673bd50
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -77,6 +77,7 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
         "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
+        "${_lucjanpath}/arch-patches/0001-fixes-5.8-add-knobs-to-disallow-unprivileged-CLONE_N.patch"
         'sphinx-workaround.patch'
          # the main kernel config files
         'config')
@@ -331,5 +332,6 @@ sha512sums=('SKIP'
             'eda1b208fa2ba8f08685a975436eb836e2090988a7ac0cca91c18f2581af0212a5d92ceeaa970ee78fedbad94becf6fbcfaa31c25740a3ce73e6f2da38f75f17'
             'ff8a0efdc8a2daeca5cf50db38ac627a874325834e912cf4ea87f840789ddddf7565ac65b5c6005cb293e3b2f423d0686da617acf944954a06b90652db4b9b6b'
             '442d0ed07622c6c62107ecf1c73b44c7623d3c57c5c61bcfb29be04ee2d40af6c9e96b9467aeb811d0b205749b2363bc8f8af8853f75ecbce7d9c920c535789f'
+            'b42c802c90943eab465f2afc4490e246d617c66961ecdf50eae712643082b1370bba66f5f08ee4694df85349e7ed4c6b83ab5cb9e20e10ba4e96068be700cdc9'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '239bcceec865a6d7a7edc80dd9e300a9cab0ac79df8f9dce17f655c43961d9cbb63c11e63ed897bd85990da00310ffd6cefbd4ef8e0f8a62e187752d64b101c1')
+            '1e89de3c34bf11e81a3a6ceebc734f85aca3b2d42375b863c330bc4955d7c9d8f40a26fb3cc46540fcbb73695a4f8e66a817fea30198a9da315b547320bf4278')
