--- a/aur-rebased/linux-zen-git/PKGBUILD
+++ b/aur-rebased/linux-zen-git/PKGBUILD
@@ -46,7 +46,7 @@ pkgbase=linux-zen-git
 # pkgname=('linux-zen-git' 'linux-zen-git-headers' 'linux-zen-git-docs')
 _major=5.7
 _srcname=zen-kernel
-pkgver=5.7.1.r917662.gf0be213b20b0
+pkgver=5.7.4.r917878.g93a4f4099285
 pkgrel=1
 pkgdesc='Linux ZEN'
 arch=('x86_64')
@@ -302,4 +302,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '115c532231164a295539e4e7550b9ca5488ba9232c30979e1db92349e7c45ed547e439c77c43a07baf597d4caf850b9a845093f92d5081e47a94d72e1ad70d20')
+            '0571cfe744e37f6b40815ae8c1073b6574cac39bd5a4b2a3c2684644ebb8bceb8929900b387a5a55b9d69d102550714f1994e7425a318b63a7cf594c8680dcf4')
