--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -44,11 +44,11 @@ _use_current=
 
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
-_major=5.6
-_minor=19
+_major=5.7
+_minor=4
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.6.19.lqx1.r0.g0a4c94b23356
+pkgver=5.7.4.lqx1.r0.g4303a04b0582
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -300,4 +300,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '592498905a1a599cb1435bbf1f686f41c4c764572c078bd84c941b10c5c1125a0313a89a96de455f10e1feb567e852bab3145f7d51ae8a752c019ad03f89da1b')
+            '7c5ae29f6fc920dd13d1972db25b2b04555bb98b3f3808b4f2062dd33545d008c79274100aa1b82ee567a399fe81f5c25f8ecf891866d9eb57f091df4eb95c4d')
