--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
-_minor=4
+_minor=5
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.7.4.lqx1.r0.g4303a04b0582
+pkgver=5.7.5.lqx1.r0.ge2326fd6371f
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -300,4 +300,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '7c5ae29f6fc920dd13d1972db25b2b04555bb98b3f3808b4f2062dd33545d008c79274100aa1b82ee567a399fe81f5c25f8ecf891866d9eb57f091df4eb95c4d')
+            '41dafdecfcd27b96386751254bb66ebcbc32e7dd905879998f00bb7795c17c2e12d3b5e30e9a37d6c491591db7a15511ef292a083b44105aa61066fd26b6fbf7')
