--- a/Devel/Config/5.8-rc/git/bfq-git/config
+++ b/Devel/Config/5.8-rc/git/bfq-git/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.8-arch2 Kernel Configuration
+# Linux/x86 5.8-arch3 Kernel Configuration
 #
 
 #
@@ -8806,6 +8806,8 @@ CONFIG_HWSPINLOCK=y
 #
 # Clock Source drivers
 #
+CONFIG_TIMER_OF=y
+CONFIG_TIMER_PROBE=y
 CONFIG_CLKEVT_I8253=y
 CONFIG_I8253_LOCK=y
 CONFIG_CLKBLD_I8253=y
