--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
 _minor=6
-_lqx=lqx3
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.7.6.lqx3.r0.g900d2babcdaa
+pkgver=5.7.6.lqx2.r0.g28a493009a07
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
