--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
-_minor=6
-_lqx=lqx4
+_minor=7
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.7.6.lqx4.r0.g48652daaf664
+pkgver=5.7.7.lqx1.r0.gd498fd926665
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
