--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
 _minor=8
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.7.8.lqx1.r0.g5470447f55b6
+pkgver=5.7.8.lqx2.r0.gd9715a3fbaf5
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
