--- a/linux-5.8rc/linux-bfq-dev-git/PKGBUILD
+++ b/linux-5.8rc/linux-bfq-dev-git/PKGBUILD
@@ -50,8 +50,8 @@ pkgbase=linux-bfq-dev-git
 _major=5.8
 _major_rc=5.8-rc
 _srcname=linux
-pkgver=5.8.rc4.r82.g0bddd227f3dc
-pkgrel=2
+pkgver=5.8.rc5.r0.g11ba468877bb
+pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -68,7 +68,7 @@ _bfq_rev_path="bfq-reverts-all"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v11"
-_bfq_rel="r2K200708"
+_bfq_rel="r2K200709"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="cpu-patches-v3-sep"
 _gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
@@ -340,7 +340,7 @@ done
 
 sha512sums=('SKIP'
             'eda1b208fa2ba8f08685a975436eb836e2090988a7ac0cca91c18f2581af0212a5d92ceeaa970ee78fedbad94becf6fbcfaa31c25740a3ce73e6f2da38f75f17'
-            'f4dd133d200d5e48f04c60ab0e079b206d1a8c85b26fc5491e05a38fef6c53ade41fd5b8a2ee8622dd9e4303992b7ba31cc6f7679534423d43ffdbc251985e85'
+            'f8b246d368a0e924490d88ce65a8e2127cabd395339c99cff47b2727aa18585dc44fed34b43665fd798d5b1a9e5c59b0985a520755bb986b19ac98eebd64ff8d'
             '442d0ed07622c6c62107ecf1c73b44c7623d3c57c5c61bcfb29be04ee2d40af6c9e96b9467aeb811d0b205749b2363bc8f8af8853f75ecbce7d9c920c535789f'
             'b09e755b512f8265b0da0a7a715931fd3242f04145f4509af686ae003e896caedc7c4f50286697b2348b3fedbd749b44b9940ec3747a4ad772aab06909e86e9c'
             '44ce19ba16c8eaf409411412568d42105a654f73cc936af53fe848f1bf59aa8cf004ea2c43b8179721bb04815447b977336dc41defc36862413abbb0511cac33'
