--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
-_minor=8
-_lqx=lqx3
+_minor=9
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.7.8.lqx3.r0.gd1054d0d2704
+pkgver=5.7.9.lqx1.r0.g8193f30e2d83
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
