--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,10 +46,10 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
 _minor=9
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.7.9.lqx1.r0.g8193f30e2d83
-pkgrel=2
+pkgver=5.7.9.lqx2.r0.g48fbd73fbf2f
+pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -300,4 +300,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '57d9faa45fd9ad2270b292c5e066d8b308405d13b63b61d07e4be0d8b5041046c209bcd02a387ff3e9f6b409dfc21f208918d28c088826e8ec0e313821640768')
+            '9f954a69401a674352b24c7e8c0a4812d39ffa9d4442c1f511ceb41b053e1de736671f0dc6414804ce08b6d58a96e77654238f860b5115a82f9076eb258e519f')
