--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
-_minor=9
-_lqx=lqx2
+_minor=10
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.7.9.lqx2.r0.g48fbd73fbf2f
+pkgver=5.7.10.lqx1.r0.g3962632684fe
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
