--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
-_minor=11
+_minor=12
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.7.11.lqx1.r0.g2ce0730057d
+pkgver=5.7.12.lqx1.r0.g6965f00c877
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
