--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
-_minor=14
+_minor=15
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.7.14.lqx1.r0.g015e566b02c
+pkgver=5.7.15.lqx1.r0.gbcb2a91254d
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
