--- a/linux-zen-rebranded/linux-zen-tag/PKGBUILD
+++ b/linux-zen-rebranded/linux-zen-tag/PKGBUILD
@@ -45,14 +45,12 @@ _use_current=
 pkgbase=linux-zen-tag
 # pkgname=('linux-zen-tag' 'linux-zen-tag-headers' 'linux-zen-tag-docs')
 _major=5.8
-#_minor=1
+_minor=1
 _zen=zen1
 _srcname=linux-${_major}
-#pkgver=${_major}.${_minor}.${_zen}
-#_pkgver=${_major}.${_minor}-${_zen}
-pkgver=${_major}.${_zen}
-_pkgver=${_major}-${_zen}
-pkgrel=2
+pkgver=${_major}.${_minor}.${_zen}
+_pkgver=${_major}.${_minor}-${_zen}
+pkgrel=1
 pkgdesc='Linux ZEN'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -307,7 +305,7 @@ done
 
 sha512sums=('45a53ecf351096ef6e98242cca4228b8da9b9139ecc6963695791ea6fb7a9484a4e1c19dcca7ce7cbfdfa49de0451b70973bb078f12bdae9cbaddbc3f8092556'
             'SKIP'
-            '3418c7f8b66fd1d48b50532286ec357c65d6f5d335709f10e79e87f6390bc253cc320a3aefd1fe554b4541e0ce4b49e6f95314b8ee9ffcf8bec43a06f43b09e9'
+            'c7afb6ca90d14d657784c7a5802e8393024921fec26ecda90a735e40dbecda4294847160ee215bf1d0ae61b8e25bc8aa130aaaabaffe4904f3590587f863fcf1'
             'SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
             '5ad3eb1fe81554b8c889331cb7107ff3e6b1f55d909eabec565969e39fd4a4d76edc1003c45219b8ef4cd6b971445a83ca5bcb6342694bc6abfee3597942e01c')
