--- a/linux-5.8/uml/linux-usermode-rc/PKGBUILD
+++ b/linux-5.8/uml/linux-usermode-rc/PKGBUILD
@@ -5,12 +5,11 @@ pkgbase=linux-usermode-rc
 pkgname=('linux-usermode-rc' 'linux-usermode-rc-modules')
 _kernelname=-usermodelinux-rc
 _major=5.8
-_minor=0
+_minor=1
 _minorc=$((_minor+1))
 _rcver=rc1
 pkgver=${_major}.${_minorc}
-#_stable=${_major}.${_minor}
-_stable=${_major}
+_stable=${_major}.${_minor}
 _stablerc=${pkgver}-${_rcver}
 _srcname=linux-${_stable}
 pkgrel=1
@@ -29,9 +28,9 @@ source=("https://www.kernel.org/pub/linux/kernel/v5.x/linux-${_stable}.tar.xz"
         'config'
         '70-uml.hook')
 
-sha256sums=('e7f75186aa0642114af8f19d99559937300ca27acaf7451b36d4f9b0f85cf1f5'
+sha256sums=('f8d2a4fe938ff7faa565765a52e347e518a0712ca6ddd41b198bd9cc1626a724'
             'SKIP'
-            '56439d6e4c8302713c8fa204f146ff2ff64ac20e6102ac1c221b2f90c12ea024'
+            '01e502b7122b864830741e0c92511aa5684d15b1e47afc25aa468a200f731974'
             'SKIP'
             '0c306efbadc8d5d779e31ff53819edb1cfb0f2d981ff3a5f45c0f9d265ade984'
             '05ea4e00d1e99bf8140a21c94e3c42acf17b9debad9c6f5decbe1dd1fe04332c')
