--- a/linux-5.8/stable-rc/linux-bfq-dev/PKGBUILD
+++ b/linux-5.8/stable-rc/linux-bfq-dev/PKGBUILD
@@ -48,12 +48,11 @@ _1k_HZ_ticks=
 pkgbase=linux-bfq-dev
 # pkgname=('linux-bfq-dev' 'linux-bfq-dev-headers' 'linux-bfq-dev-docs')
 _major=5.8
-_minor=0
+_minor=1
 _minorc=$((_minor+1))
 _rcver=rc1
 pkgver=${_major}.${_minorc}
-#_stable=${_major}.${_minor}
-_stable=${_major}
+_stable=${_major}.${_minor}
 _stablerc=${pkgver}-${_rcver}
 _srcname=linux-${_stable}
 pkgrel=0
@@ -346,9 +345,9 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha512sums=('45a53ecf351096ef6e98242cca4228b8da9b9139ecc6963695791ea6fb7a9484a4e1c19dcca7ce7cbfdfa49de0451b70973bb078f12bdae9cbaddbc3f8092556'
+sha512sums=('d294f6d88dca47e3cbedbd0219f2b662572aa0f12fc1913ae79513362cf0932e3a8009c775e5d0d43957dfb1c79f560a38de07fbed169e171f8af25af29b14f5'
             'SKIP'
-            'd24636ffd924ed692ff3af0794e4389402ed6fa82add4f6898163b60d3fb2400f14c7749c53d711019db4dc705964fcffe2ab53aa22ed2f176e268d67851cb67'
+            '605b7c8f6f55113410c65cf44bb892cb6c65d623e565f1265b14008cd056a566c3e3caaf0b27b97b5c26fa4f4c4291a8b63b6a63fc2f0ede611a0060836459ea'
             'SKIP'
             'ee27231ea9d9fb81c5da64964a85daed3ac12f3b43176f2508f217c2ff0d8b634b9b532adc3cd640e28af221a78b319f40e0ec4b6e690a2322bd9ff6afb77cb1'
             '2e58c7abb61edc8d8b5fb97fcaa80b9346d4c20a9ebeb3325d293614cea22f0ead81c9369eeb170f64aade01d30b439ad573c75304263135b006702393fb687a'
