--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -57,8 +57,8 @@ _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-git
 pkgver=5.8.6.1.r1708.g7e2fc1e
-pkgrel=1
-pkgdesc='Linux LQX'
+pkgrel=3
+pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="http://liquorix.net/"
 license=('GPL2')
