--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -52,8 +52,8 @@ _minor=6
 _lqx=lqx1
 _srcname=zen-kernel
 pkgver=5.8.6.lqx1.r0.g356c15bb2978
-pkgrel=1
-pkgdesc='Linux LQX'
+pkgrel=3
+pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
 license=('GPL2')
