--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -49,9 +49,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.8
 _minor=12
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.8.12.lqx1.r0.g8d3a7388c15a
+pkgver=5.8.12.lqx2.r0.gfa58bf5825cb
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
