--- a/linux-5.9rc/linux-uksm-git/PKGBUILD
+++ b/linux-5.9rc/linux-uksm-git/PKGBUILD
@@ -50,8 +50,8 @@ pkgbase=linux-uksm-git
 _major=5.9
 _major_rc=5.9-rc
 _srcname=linux
-pkgver=5.9.rc7.r27.g60e720931556
-pkgrel=2
+pkgver=5.9.rc8.r0.g549738f15da0
+pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -61,7 +61,7 @@ makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme
              'graphviz' 'imagemagick' 'pahole')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major_rc}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major_rc}"
-_uksm_path="uksm-patches-v3"
+_uksm_path="uksm-patches-v4"
 #_uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master/v5.x"
 #_uksm_path="https://raw.githubusercontent.com/zaza42/uksm/master"
 _uksm_patch="0001-UKSM-for-${_major}.patch"
